[FIX] point_of_sale: add scrollbar when there are too much payment methods
bzr revid: fva@openerp.com-20130327141426-ivgfxlsxlpazehar

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -291,10 +291,15 @@
     display: inline-block;
     text-align: center;
     vertical-align: top;
+    width: 205px;
+    max-height: 232px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 .point-of-sale #paypad button {
     height: 50px;
-    width: 208px;
+    display: block;
+    width: 100%;
     margin: 0px -6px 4px -2px;
     font-weight: bold;
     vertical-align: middle;
